--- a/README
+++ b/README
@@ -1,11 +1,13 @@
 You will find here every update of what you need for the contest !
 
--------------------- 16:00 --------------------------
 
 Pour lancer le serveur, vous devez lancer la commande suivante :
 
 java -jar server.jar mapName time playerName1 port1 playerName2 port2 ...
-java -jar server.jar france -42 player1 9090
+Exemples de commandes :
+java -jar server.jar france -1 player1 9090
+java -jar server.jar europe -1 player1 9090
+java -jar server.jar middleeast -1 player1 9090
 
 Puis cliquez sur "Start without waiting"
 
